# max-flow-optimizer

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
analytics/: README.md
analytics/python/: analytics_io.py  analyze_runs.py  charts.py  comparison.py  duckdb_queries.py  quality.py  summarizer.py
analytics/queries/: feasibility.sql  graph-size.sql  performance.sql
apps/api/: .env.example  README.md  package.json  tsconfig.json
apps/api/src/: app.ts  config.ts  engineClient.ts  errors.ts  server.ts
apps/api/src/controllers/: healthController.ts  solveController.ts
apps/api/src/middleware/: errorMiddleware.ts  requestContextMiddleware.ts
apps/api/src/routes/: healthRoutes.ts  v1Routes.ts
apps/api/src/services/: solveService.ts
apps/api/src/types/: maxflow-domain.d.ts
apps/api/tests/: api.test.ts
apps/web/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  types.ts
apps/web/src/app/: AppHeader.tsx  AppLayout.tsx  AppNav.tsx  sections.ts
apps/web/src/components/: ui.tsx  (+3 more)
docs/: README.md
docs/00-product/: BACKLOG.md  DemoScript.md  FrontendSpec.md  ImplementationRoute.md  LocalRunbook.md  PRD.md  README.md  ReleaseChecklist.md  Roadmap.md
docs/10-model/: Model.md  README.md
docs/20-architecture/: ArchitecturePrinciples.md  DependencyList.md  DependencyPolicy.md  EngineIntegrationContract.md  EngineSpec.md  Monorepo.md  README.md  RuntimeConfig.md  StackDecision.md  WorkspaceScripts.md
docs/30-api/: API.md  ErrorCatalog.md  OpenAPI.md  README.md  ValidationStrategy.md
docs/40-quality/: BenchmarkProtocol.md  BenchmarkReport.md  CI.md  NonFunctionalLimits.md  Observability.md  README.md  RiskPlaybook.md  TestPlan.md  TraceabilityMatrix.md  WorkflowConventions.md
docs/50-operations/: LocalRunbook.md  README.md  RuntimeConfig.md
docs/60-analytics/: AnalyticsImplementationRoute.md  AnalyticsSpec.md  README.md
infra/ci/: README.md
scripts/: README.md  analytics-aggregate.mjs  analytics-generate.mjs  analytics-report.mjs  analytics-run.mjs  analytics-scenarios.mjs  benchmark-api.mjs  smoke-api.mjs
services/engine-cpp/: CMakeLists.txt  README.md
services/engine-cpp/include/: engine_version.hpp
services/engine-cpp/include/engine/: analytics.hpp  cli.hpp  contract.hpp  edmonds_karp.hpp  error.hpp  graph.hpp  json.hpp  max_flow.hpp  normalized_instance.hpp  problem_network.hpp  solver.hpp
services/engine-cpp/src/: analytics.cpp  cli.cpp  contract.cpp  edmonds_karp.cpp  error.cpp  graph.cpp  json.cpp  main.cpp  max_flow.cpp  normalized_instance.cpp  problem_network.cpp  solver.cpp
services/engine-cpp/tests/: cli_test.cpp  dummy_test.cpp  json_test.cpp  max_flow_test.cpp  problem_network_test.cpp  solver_test.cpp  test_utils.hpp
(+46 files in other folders)
